--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "@google/genai": "^1.30.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
